<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

    <item
        android:id="@+id/navigation_lab3"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_lab4"
        android:title="@string/title_lab4" />
    <item
        android:id="@+id/navigation_lab5"
        android:title="@string/title_lab5" />
        <item
            android:id="@+id/navigation_lab6"
            android:title="@string/title_lab6" />
        <item
            android:id="@+id/navigation_lab7"
            android:title="@string/title_lab7" />
        <item
            android:id="@+id/navigation_lab8"
            android:title="@string/title_lab8" />
</group>
</menu>